<resources>
    <string name="app_name">Smart Post</string>
    <string name="slide_1_desc">Send Invitation to your friends and family via text message</string>
    <string name="create_new_account">  CREATE NEW ACCOUNT  </string>
    <string name="smart_post">SMART POST</string>
    <string name="slide_1_title">SEND TEXT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="slide_2_title">STATUS</string>
    <string name="slide_2_desc">Status update for sent messages</string>
    <string name="slide_3_title">PROFILE</string>
    <string name="slide_3_desc">view and manage your profile</string>

    <!-- Strings related to login -->
    <string name="login">SIGN IN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <!-- Validation -->
    <string name="nameerror">Enter a valid Name</string>
    <string name="emailerror">Enter a valid Email</string>
    <string name="mobileerror">Enter a valid Mobile</string>
    <string name="passerror">Enter a valid Password</string>
    <string name="cpasserror">Password dont match</string>


    <string name="facebook_app_id">128690867809312</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fb_login_protocol_scheme">fb128690867809312</string>

</resources>
